[gd_scene load_steps=3 format=3 uid="uid://dodrxe0ij5fmy"]

[ext_resource type="Script" path="res://location_window.gd" id="1_7t4e4"]
[ext_resource type="Texture2D" uid="uid://l7pq2hw2d1i7" path="res://data/cross.png" id="1_vhdxq"]

[node name="LocationWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7t4e4")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.3591, 0.63, 0.48552, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 40

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
text = "Location: "

[node name="Attribute_Name" type="RichTextLabel" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 30
text = "<placeholder>"
fit_content = true

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
text = "Address:"

[node name="Attribute_Address" type="RichTextLabel" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 24
text = "<placeholder>"
fit_content = true

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
text = "Hours:"

[node name="Attribute_Hours" type="RichTextLabel" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 24
text = "<placeholder>"
fit_content = true

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
text = "Link:"

[node name="Attribute_Link" type="LinkButton" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "<placeholder>"

[node name="HBoxContainer5" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
text = "Description:"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
theme_override_constants/margin_left = 40

[node name="Attribute_Description" type="RichTextLabel" parent="MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer5/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 24
text = "<placeholder>"
fit_content = true

[node name="MarginContainer2" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(45, 45)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5

[node name="CloseLocationWindow" type="Button" parent="MarginContainer2"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
icon = ExtResource("1_vhdxq")
expand_icon = true

[connection signal="pressed" from="MarginContainer2/CloseLocationWindow" to="." method="_on_close_location_window_pressed"]
